# phoenixpy

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: decode_event.py  decode_market.py  order_subscribe.py  order_subscribe_default_client.py  place_limit_order.py  run_market_maker.py  stream_orderbook.py
phoenix/: client.py  events.py  market.py  market_metadata.py  order_subscribe_response.py  program_id.py
phoenix/instructions/: __init__.py  cancel_all_orders.py  cancel_all_orders_with_free_funds.py  cancel_multiple_orders_by_id.py  cancel_multiple_orders_by_id_with_free_funds.py  cancel_up_to.py  cancel_up_to_with_free_funds.py  deposit_funds.py  place_limit_order.py  place_limit_order_with_free_funds.py  reduce_order.py  reduce_order_with_free_funds.py  swap.py  swap_with_free_funds.py  withdraw_funds.py
phoenix/types/: __init__.py  audit_log_header.py  cancel_multiple_orders_by_id_params.py  cancel_order_params.py  cancel_up_to_params.py  condensed_order.py  deposit_params.py  evict_event.py  expired_order_event.py  failed_multiple_limit_order_behavior.py  fee_event.py  fifo_order_id.py  fifo_resting_order.py  fill_event.py  fill_summary_event.py  market_header.py  market_size_params.py  market_status.py  multiple_order_packet.py  order_packet.py  phoenix_market_event.py  place_event.py  reduce_event.py  reduce_order_params.py  seat.py  seat_approval_status.py  self_trade_behavior.py  side.py  time_in_force_event.py  token_params.py  trader_state.py  withdraw_params.py
