[project]
name = "phoenix-trade"
version = "0.1.3"
authors = [
  { name="Ellipsis Labs", email="contributors@ellipsislabs.xyz" },
]
description = "A Python library for interacting with Phoenix, a limit order book spot exchange on the Solana blockchain."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ellipsis-Labs/phoenixpy/"